add business license information

--- a/checkout.html
+++ b/checkout.html
@@ -343,18 +343,22 @@
                         <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="32"
                             class="d-inline-block align-text-top me-2">
                     </h5>
-                    <p>Hệ thống thẩm mỹ viện Iris Beauty với nhiều chi nhánh trên toàn quốc. Chuyên cung cấp dịch vụ
-                        làm đẹp với công nghệ tiên tiến.</p>
-                    <p>
-                        <i class="fas fa-envelope me-2"></i> cskh@seoulcenter.vn<br>
-                        <i class="fas fa-phone me-2"></i> 1800.3333 - (+84) 914.269.346<br>
-                        <i class="fas fa-clock me-2"></i> Thời gian: 8:30 - 19:30 hằng ngày
+                    <p class="fw-bold mb-2">HỘ KINH DOANH IRIS BEAUTY</p>
+                    <p class="small mb-3">Chuyên cung cấp mỹ phẩm, nước hoa cao cấp và dịch vụ spa, chăm sóc sắc đẹp
+                        chuyên nghiệp.</p>
+                    <p class="small">
+                        <i class="fas fa-id-card me-2"></i> <strong>Mã số ĐKKD:</strong> 068197003989<br>
+                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> 224/60 đường Dương Đình
+                        Hội, Phường Tăng Nhơn Phú, TP. Hồ Chí Minh<br>
+                        <i class="fas fa-phone me-2"></i> <strong>Điện thoại:</strong> 0965765346<br>
+                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@irisbeauty.vn<br>
+                        <i class="fas fa-clock me-2"></i> <strong>Giờ làm việc:</strong> 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
-                        <a href="#" class="me-3"><i class="fab fa-facebook fa-lg"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-youtube fa-lg"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-tiktok fa-lg"></i></a>
+                        <a href="#" class="me-3" title="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="me-3" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="me-3" title="YouTube"><i class="fab fa-youtube fa-lg"></i></a>
+                        <a href="#" class="me-3" title="TikTok"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2">
@@ -377,19 +381,21 @@
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="fw-bold mb-3">Hệ thống cơ sở</h6>
+                    <h6 class="fw-bold mb-3">Địa chỉ cửa hàng</h6>
                     <div class="small">
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 375 Nguyễn Thượng Hiền, Q.10, TP.HCM<br>
-                            Mở cửa: 8:30 - 19:30</p>
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 38 Phố Thái Thịnh, Đống Đa, Hà Nội<br>
-                            Mở cửa: 8:30 - 19:30</p>
+                        <p><i class="fas fa-map-marker-alt me-2"></i> <strong>Cơ sở chính:</strong><br>
+                            224/60 Dương Đình Hội, P. Tăng Nhơn Phú,<br>
+                            TP. Hồ Chí Minh<br>
+                            <i class="fas fa-clock me-2 mt-1"></i> Mở cửa: 8:30 - 19:30 hằng ngày
+                        </p>
                     </div>
                 </div>
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 Iris Beauty - Hệ Thống Thẩm Mỹ Quốc Tế | All rights reserved</p>
-                <p class="small text-muted">*Mức độ hiệu quả tùy vào cơ địa của mỗi khách hàng</p>
+                <p class="mb-1">&copy; 2024 Hộ Kinh Doanh Iris Beauty | Mã số ĐKKD: 068197003989</p>
+                <p class="small text-muted mb-0">Đăng ký lần đầu: 25/03/2024 | Đăng ký thay đổi lần thứ 3: 29/09/2025
+                </p>
             </div>
         </div>
     </footer>
@@ -397,7 +403,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:18003333" class="floating-btn phone-btn" title="Gọi ngay: 1800.3333">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965 765 346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
