--- a/huong-dan-dat-hang.html
+++ b/huong-dan-dat-hang.html
@@ -694,10 +694,14 @@
                 <div class="col-lg-4 mb-4">
                     <div class="mb-3">
                         <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="50" class="mb-3">
-                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">Iris Beauty</h5>
+                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">HỘ KINH DOANH IRIS BEAUTY
+                        </h5>
                     </div>
-                    <p class="mb-3">Nơi mùi hương làm bạn đồng hành - Spa & Thẩm mỹ viện chuyên nghiệp, mang
-                        đến trải nghiệm làm đẹp hoàn hảo cho bạn.</p>
+                    <p class="mb-2"><strong>Giấy CNĐKHKD:</strong> 068197003989</p>
+                    <p class="mb-2"><strong>Ngày cấp:</strong> 25/03/2024</p>
+                    <p class="mb-2"><strong>Nơi cấp:</strong> Phòng Tài chính - Kế hoạch Quận 9, TP. Hồ Chí Minh</p>
+                    <p class="mb-3">Nơi mùi hương làm bạn đồng hành - Chuyên cung cấp nước hoa chính hãng và mỹ phẩm cao
+                        cấp.</p>
                     <div class="d-flex gap-3">
                         <a href="#" class="text-dark"><i class="fab fa-facebook fa-lg"></i></a>
                         <a href="#" class="text-dark"><i class="fab fa-instagram fa-lg"></i></a>
@@ -706,65 +710,46 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
-                    <h6 class="fw-bold mb-3">Iris Beauty</h6>
+                    <h6 class="fw-bold mb-3">Về chúng tôi</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="index.html" class="text-decoration-none">Giới thiệu</a>
-                        </li>
+                        <li class="mb-2"><a href="index.html" class="text-decoration-none">Giới thiệu</a></li>
                         <li class="mb-2"><a href="#footer" class="text-decoration-none">Liên hệ</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Tuyển
-                                dụng</a></li>
+                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Tuyển dụng</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <h6 class="fw-bold mb-3">Hỗ trợ</h6>
+                    <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Các
-                                câu hỏi thường gặp</a></li>
-                        <li class="mb-2"><a href="huong-dan-dat-hang.html" class="text-decoration-none">Hướng
-                                dẫn đặt hàng</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phương thức vận
-                                chuyển</a></li>
+                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua
+                                hàng</a></li>
+                        <li class="mb-2"><a href="huong-dan-dat-hang.html" class="text-decoration-none">Hướng dẫn đặt
+                                hàng</a></li>
+                        <li class="mb-2"><a href="hoi-dap-ve-hang-hoa.html" class="text-decoration-none">Hỏi đáp về hàng
+                                hóa</a></li>
                         <li class="mb-2"><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức
                                 thanh toán</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Theo
-                                dõi đơn hàng</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính
-                                sách giá cả</a></li>
-                        <li class="mb-2"><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Chính
-                                sách đổi trả</a></li>
-                        <li class="mb-2"><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính
-                                sách bảo mật</a></li>
+                        <li class="mb-2"><a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo
+                                mật</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <h6 class="fw-bold mb-3">Liên hệ</h6>
-                    <div class="mb-3">
-                        <p class="mb-1"><i class="fas fa-map-marker-alt me-2"></i>Địa chỉ chính:</p>
-                        <p>45-47 CMT8, Phường Bến Thành, Quận 1, TP. Hồ Chí Minh</p>
-                    </div>
-                    <div class="mb-3">
-                        <p class="mb-1"><i class="fas fa-phone me-2"></i>Hotline:</p>
-                        <p><a href="tel:19000129" class="text-decoration-none">1900 0129</a> (9:00 - 21:00)
-                        </p>
-                    </div>
-                    <div>
-                        <p class="mb-1"><i class="fas fa-envelope me-2"></i>Email:</p>
-                        <p><a href="mailto:info@irisbeauty.vn" class="text-decoration-none">info@irisbeauty.vn</a></p>
+                    <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
+                    <div class="small">
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                            Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
+                        <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
+                                class="text-decoration-none text-dark">0965765346</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
+                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
             </div>
-
             <hr class="my-4">
-
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <p class="mb-0">&copy; 2013-2025 Iris Beauty. All Rights Reserved.</p>
-                    <p class="mb-0 small">GPKD: 0316901314. Ngày cấp: 09/06/2021. Nơi cấp: Sở KH&ĐT TP.HCM</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <p class="mb-0 small">Địa chỉ: Tầng 7, 19A Cộng Hòa, Tòa Nhà Scetpa, Phường 12, Quận Tân Bình, TP.
-                        Hồ Chí Minh</p>
-                </div>
+            <div class="text-center">
+                <p class="mb-0">&copy; 2024 HỘ KINH DOANH IRIS BEAUTY - Nước Hoa & Mỹ Phẩm Chính Hãng | CNĐKHKD:
+                    068197003989</p>
             </div>
         </div>
     </footer>
