--- a/phuong-thuc-thanh-toan.html
+++ b/phuong-thuc-thanh-toan.html
@@ -602,15 +602,19 @@
                 <div class="col-lg-4 mb-4">
                     <div class="mb-3">
                         <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="50" class="mb-3">
-                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">Iris Beauty</h5>
+                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">HỘ KINH DOANH IRIS BEAUTY
+                        </h5>
                     </div>
-                    <p class="mb-3">Spa & Thẩm mỹ viện chuyên nghiệp, mang đến trải nghiệm làm đẹp hoàn hảo với các
-                        phương thức thanh toán linh hoạt và an toàn.</p>
-                    <div class="social-links">
-                        <a href="#" class="me-3"><i class="fab fa-facebook text-primary"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram text-danger"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-youtube text-danger"></i></a>
-                        <a href="#"><i class="fab fa-tiktok text-dark"></i></a>
+                    <p class="mb-2"><strong>Giấy CNĐKHKD:</strong> 068197003989</p>
+                    <p class="mb-2"><strong>Ngày cấp:</strong> 25/03/2024</p>
+                    <p class="mb-2"><strong>Nơi cấp:</strong> Phòng Tài chính - Kế hoạch Quận 9, TP. Hồ Chí Minh</p>
+                    <p class="mb-3">Chuyên cung cấp nước hoa chính hãng và mỹ phẩm cao cấp với các phương thức thanh
+                        toán linh hoạt và an toàn.</p>
+                    <div class="d-flex gap-3">
+                        <a href="#" class="text-dark"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-youtube fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
@@ -640,19 +644,22 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <h6 class="fw-bold mb-3">Vị trí cửa hàng</h6>
+                    <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 123 Nguyễn Huệ, Quận 1, TP.HCM<br>
-                            Mở cửa: 9h - 21h</p>
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 456 Hoàn Kiếm, Hà Nội<br>
-                            Mở cửa: 10h - 20h</p>
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                            Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
+                        <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
+                                class="text-decoration-none text-dark">0965765346</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
+                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 Iris Beauty - Spa & Thẩm Mỹ Viện | All rights reserved |
-                    <a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a>
+                <p class="mb-0">&copy; 2024 HỘ KINH DOANH IRIS BEAUTY - Nước Hoa & Mỹ Phẩm Chính Hãng | CNĐKHKD:
+                    068197003989 | <a href="chinh-sach-bao-mat.html" class="text-decoration-none">Chính sách bảo mật</a>
                 </p>
             </div>
         </div>
@@ -661,7 +668,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:19000129" class="floating-btn phone-btn" title="Gọi ngay: 1900 0129">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965765346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
