--- a/shopmypham.html
+++ b/shopmypham.html
@@ -778,38 +778,40 @@
             <div class="row g-4">
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3" style="font-family: 'Playfair Display', serif;">
-                        <img src="assets/images/LOGO01.png" alt="SpaStore" height="32"
+                        <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="32"
                             class="d-inline-block align-text-top me-2">
                     </h5>
-                    <p>Điểm đến cao cấp của bạn cho mỹ phẩm chăm sóc da chính hãng từ các thương hiệu hàng đầu thế giới.
-                    </p>
-                    <p>
-                        <i class="fas fa-envelope me-2"></i> spa.store@gmail.com<br>
-                        <i class="fas fa-phone me-2"></i> +84 (028) 123-4567
+                    <p class="fw-bold mb-2">HỘ KINH DOANH IRIS BEAUTY</p>
+                    <p class="small mb-3">Chuyên cung cấp mỹ phẩm, nước hoa cao cấp và dịch vụ spa, chăm sóc sắc đẹp
+                        chuyên nghiệp.</p>
+                    <p class="small">
+                        <i class="fas fa-id-card me-2"></i> <strong>Mã số ĐKKD:</strong> 068197003989<br>
+                        <i class="fas fa-map-marker-alt me-2"></i> <strong>Địa chỉ:</strong> 224/60 đường Dương Đình
+                        Hội, Phường Tăng Nhơn Phú, TP. Hồ Chí Minh<br>
+                        <i class="fas fa-phone me-2"></i> <strong>Điện thoại:</strong> 0965765346<br>
+                        <i class="fas fa-envelope me-2"></i> <strong>Email:</strong> contact@irisbeauty.vn<br>
+                        <i class="fas fa-clock me-2"></i> <strong>Giờ làm việc:</strong> 8:30 - 19:30 hằng ngày
                     </p>
                     <div class="social-links mt-3">
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-youtube fa-lg"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-tiktok fa-lg"></i></a>
+                        <a href="#" class="me-3" title="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="me-3" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="me-3" title="YouTube"><i class="fab fa-youtube fa-lg"></i></a>
+                        <a href="#" class="me-3" title="TikTok"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2">
-                    <h6 class="fw-bold mb-3">Mua sắm</h6>
+                    <h6 class="fw-bold mb-3">Dịch vụ</h6>
                     <ul class="list-unstyled">
-                        <li><a href="shopmypham.html?filter=skincare" class="text-decoration-none" target="_blank">Chăm
-                                sóc da</a></li>
-                        <li><a href="shopmypham.html?filter=serum" class="text-decoration-none"
-                                target="_blank">Serum</a></li>
-                        <li><a href="shopmypham.html?filter=cream" class="text-decoration-none" target="_blank">Kem
-                                dưỡng</a></li>
-                        <li><a href="shopmypham.html" class="text-decoration-none" target="_blank">Tất cả sản phẩm</a>
-                        </li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Trị mụn y khoa</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Tắm trắng 5in1</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cấy collagen</a></li>
+                        <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Phun xăm thẩm mỹ</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="fw-bold mb-3">Dịch vụ khách hàng</h6>
+                    <h6 class="fw-bold mb-3">Hỗ trợ khách hàng</h6>
                     <ul class="list-unstyled">
+                        <li><a href="#newsletter" class="text-decoration-none">Đặt lịch tư vấn</a></li>
                         <li><a href="cach-thuc-mua-hang.html" class="text-decoration-none">Cách thức mua hàng</a></li>
                         <li><a href="phuong-thuc-thanh-toan.html" class="text-decoration-none">Phương thức thanh
                                 toán</a></li>
@@ -817,18 +819,20 @@
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="fw-bold mb-3">Vị trí cửa hàng</h6>
+                    <h6 class="fw-bold mb-3">Địa chỉ cửa hàng</h6>
                     <div class="small">
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 123 Nguyễn Huệ, Quận 1, TP.HCM<br>
-                            Mở cửa: 9h - 21h</p>
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 456 Hoàn Kiếm, Hà Nội<br>
-                            Mở cửa: 10h - 20h</p>
+                        <p><i class="fas fa-map-marker-alt me-2"></i> <strong>Cơ sở chính:</strong><br>
+                            224/60 Dương Đình Hội, P. Tăng Nhơn Phú,<br>
+                            TP. Hồ Chí Minh<br>
+                            <i class="fas fa-clock me-2 mt-1"></i> Mở cửa: 8:30 - 19:30 hằng ngày
+                        </p>
                     </div>
                 </div>
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 SpaStore | All rights reserved | <a href="index.html" class="">Trang chủ</a>
+                <p class="mb-1">&copy; 2024 Hộ Kinh Doanh Iris Beauty | Mã số ĐKKD: 068197003989</p>
+                <p class="small text-muted mb-0">Đăng ký lần đầu: 25/03/2024 | Đăng ký thay đổi lần thứ 3: 29/09/2025
                 </p>
             </div>
         </div>
@@ -837,7 +841,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965 765 346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
