--- a/product-detail-my-pham.html
+++ b/product-detail-my-pham.html
@@ -786,19 +786,19 @@
                 <div class="col-lg-4 mb-4">
                     <div class="mb-3">
                         <img src="assets/images/LOGO01.png" alt="Iris Beauty" height="50" class="mb-3">
-                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">Iris Beauty</h5>
+                        <h5 class="fw-bold" style="font-family: 'Playfair Display', serif;">HỘ KINH DOANH IRIS BEAUTY
+                        </h5>
                     </div>
+                    <p class="mb-2"><strong>Giấy CNĐKHKD:</strong> 068197003989</p>
+                    <p class="mb-2"><strong>Ngày cấp:</strong> 25/03/2024</p>
+                    <p class="mb-2"><strong>Nơi cấp:</strong> Phòng Tài chính - Kế hoạch Quận 9, TP. Hồ Chí Minh</p>
                     <p class="mb-3">Điểm đến cao cấp của bạn cho mỹ phẩm chăm sóc da chính hãng từ các thương hiệu hàng
                         đầu thế giới.</p>
-                    <p>
-                        <i class="fas fa-envelope me-2"></i> spa.store@gmail.com<br>
-                        <i class="fas fa-phone me-2"></i> +84 (028) 123-4567
-                    </p>
-                    <div class="social-links mt-3">
-                        <a href="#" class="text-dark me-3"><i class="fab fa-facebook fa-lg"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="fab fa-instagram fa-lg"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="fab fa-youtube fa-lg"></i></a>
-                        <a href="#" class="text-dark me-3"><i class="fab fa-tiktok fa-lg"></i></a>
+                    <div class="d-flex gap-3">
+                        <a href="#" class="text-dark"><i class="fab fa-facebook fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-instagram fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-youtube fa-lg"></i></a>
+                        <a href="#" class="text-dark"><i class="fab fa-tiktok fa-lg"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4">
@@ -826,18 +826,22 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <h6 class="fw-bold mb-3">Vị trí cửa hàng</h6>
+                    <h6 class="fw-bold mb-3">Thông tin liên hệ</h6>
                     <div class="small">
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 123 Nguyễn Huệ, Quận 1, TP.HCM<br>
-                            Mở cửa: 9h - 21h</p>
-                        <p><i class="fas fa-map-marker-alt me-2"></i> 456 Hoàn Kiếm, Hà Nội<br>
-                            Mở cửa: 10h - 20h</p>
+                        <p class="mb-2"><i class="fas fa-map-marker-alt me-2"></i> 224/60 đường Dương Đình Hội, Phường
+                            Tăng Nhơn Phú, TP. Hồ Chí Minh</p>
+                        <p class="mb-2"><i class="fas fa-phone me-2"></i> <a href="tel:0965765346"
+                                class="text-decoration-none text-dark">0965765346</a></p>
+                        <p class="mb-2"><i class="fas fa-envelope me-2"></i> <a href="mailto:contact@irisbeauty.vn"
+                                class="text-decoration-none text-dark">contact@irisbeauty.vn</a></p>
+                        <p class="mb-0"><i class="fas fa-clock me-2"></i> Mở cửa: 9:00 - 21:00 (Thứ 2 - CN)</p>
                     </div>
                 </div>
             </div>
             <hr class="my-4">
             <div class="text-center">
-                <p class="mb-0">&copy; 2024 Iris Beauty - Hệ Thống Mỹ Phẩm Chính Hãng | All rights reserved</p>
+                <p class="mb-0">&copy; 2024 HỘ KINH DOANH IRIS BEAUTY - Nước Hoa & Mỹ Phẩm Chính Hãng | CNĐKHKD:
+                    068197003989</p>
             </div>
         </div>
     </footer>
@@ -845,7 +849,7 @@
     <!-- Floating Contact Buttons -->
     <div class="floating-contacts">
         <!-- Phone Button -->
-        <a href="tel:0388178062" class="floating-btn phone-btn" title="Gọi ngay: 0388178062">
+        <a href="tel:0965765346" class="floating-btn phone-btn" title="Gọi ngay: 0965765346">
             <i class="fas fa-phone"></i>
         </a>
         <!-- Facebook Button -->
